--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Install library
         run: |
-          pip install -e .
+          pip install -e .[dev]
 
 #      - name: Run migration
 #        run: |
